allow-non-mtls-details-all-ports.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: allow-non-mtls-details-all-ports
  namespace: books
spec:
  selector:
    matchLabels:
      app: details
  mtls:
    mode: PERMISSIVE
