disable-mtls-details-port-9080.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls-details-port-9080
  namespace: books
spec:
  selector:
    matchLabels:
      app: details
  mtls:
    mode: STRICT
  portLevelMtls:
    9080:
      mode:  PERMISSIVE #DISABLE
