strict-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: strict-auth
  namespace: books
spec:
  mtls:
    mode: STRICT
