allow-access-to-reviews-from-product.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-access-to-reviews-from-product
  namespace: books
spec:
  selector:
   matchLabels:
     app: details
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/books/sa/bookinfo-productpage"]
